# SignalFive

./: .gitignore  INSTALL.md  README.md  environment.yml  pyproject.toml  repo.md  requirements.txt  run_strict.bat  run_strict.sh
data/: README.md  corr0.7_greedy_有效因子.csv  因子库.csv  有效因子ICIR_回测前.csv  附件1 28只非债券ETF产品池.xlsx  附件3 高频经济指标（信用利差、期限利差、汇率等）.csv  高相关因子对_阈值0.7.csv
data/versions/v20251030/: price.csv  有效因子.csv  附件1 28只非债券ETF产品池.xlsx
data/versions/v20260313/: macro.csv  price.csv
data/versions/v20260320/: price.csv  增量更新-高频经济指标重命名-03-20.csv
docs/: run_main_and_strict_oos_stitch_详细讲解.md
scripts/: run_strict.bat  run_strict.sh
src/signalfive/: __init__.py
src/signalfive/analysis/: __init__.py  cvar_tuning_plots.py
src/signalfive/backtest/: __init__.py  engine.py
src/signalfive/config/: base.py
src/signalfive/data_loader/: loader.py
src/signalfive/factors/: __init__.py  calc.py  combine.py  library.py  testing.py
src/signalfive/pipelines/: __init__.py  run_composite_factor_test.py  run_cvar_bayes.py  run_main.py  run_strict_oos_stitch.py  run_strict_oos_train.py
src/signalfive/portfolio/: __init__.py  optimizer.py  regime.py
