[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalfive"
version = "0.1.0"
description = "SignalFive ETF Research and Backtesting Toolkit"
requires-python = ">=3.9,<3.12"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "bt",
  "joblib",
  "openpyxl",
]

[project.scripts]
signalfive-main = "signalfive.pipelines.run_main:main"
signalfive-cvar-bayes = "signalfive.pipelines.run_cvar_bayes:main"
signalfive-strict-oos = "signalfive.pipelines.run_strict_oos_stitch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
